# CinePI-GUI

./: CMakeLists.txt  Makefile  README.md  defs.h  globals.h  linki2c.h  lv_conf.h  lv_drv_conf.h  main.c  mean.h  sync.h
lvgl/: lvgl.h
lvgl/env_support/cmake/: custom.cmake
ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_font_MonoFont.c  ui_font_extraSymbols.c  ui_helpers.c  ui_helpers.h
